src/components/Header/Header.module.scss
header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    flex-direction: row;
    gap: spacing(250); // 20px
    padding: spacing(700) 0 spacing(800) 0; // 56px 0 64px 0

    a {
        font-weight: var(--font-weight-black);
        font-size: px-to-rem(20);
    }

    @include respond(sm) {
        text-align: center;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: spacing(400); // 32px
    }
}

nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    gap: 0;

    @include respond(xs) {
        gap: spacing(150); // 12px
        justify-content: center;
        align-items: center;
    }

    a {
        @include respond(xs) {
            font-size: px-to-rem(14);
            text-decoration: underline;
        }
    }

    li {
        display: flex;
        align-items: center;

        &:not(:first-child)::before {
            content: '';
            display: inline-block;
            width: px-to-rem(10);
            height: px-to-rem(10);
            border-radius: 50%;
            background: var(--color-light);
            margin: 0 px-to-rem(16);

            @include respond(xs) {
                display: none;  
            }
        }
    }
}

.brand {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 0.3em;

    @include respond(sm) {
        align-items: center;
        text-align: center;
        gap: px-to-rem(4);

        a {
            text-decoration: none;
            color: var(--color-dark);
        }
    }
}

.byline {
    @extend .caption-md;
}

.skip-link {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0, 0, 0, 0);
    white-space: nowrap;
    border: 0;
    transition: none;;

    &:focus-visible {
        background: var(--color-primary);
        color: var(--color-background);
        font-size: px-to-rem(12);
        width: auto;
        height: auto;
        margin: spacing(150); // 12px
        padding: spacing(150) spacing(200); // 12px 16px
        z-index: 1000;
        clip: auto;
        white-space: normal;
        border-radius: radius(100); // 4px
        overflow: auto;
        text-decoration: underline;
        top: 0;
        left: 0;
    }
}

